--- a/FrontEnd/voebr/src/components/Navbar/style.css
+++ b/FrontEnd/voebr/src/components/Navbar/style.css
@@ -8,6 +8,7 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 2rem;
+
     
     
    
@@ -18,6 +19,7 @@
         
     border-radius: 7px;
     width: 50%;
+    max-width: 150px;
     height: 43px;
     border: none;
     font-weight: 500;
@@ -34,5 +36,6 @@ button :hover{
     justify-content: space-between;
     align-items: center;
     font-weight: 500;
-    width: 20rem;
+width: 17rem;
+    
 }
