--- a/FrontEnd/voebr/src/components/SearchMenu/style.css
+++ b/FrontEnd/voebr/src/components/SearchMenu/style.css
@@ -60,7 +60,7 @@
 .btn{
     background-color:#00A6D4;
     border-radius: 7px;
-    width: 153px;
+    max-width: 153px;
     height: 43px;
     border: none;
     font-weight: 500;
@@ -78,17 +78,16 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
 }
-.TextLabel1{
-    background-color: aliceblue;
-    
-}
+
 .input1{
     background-color: #b8dde7;
     border-radius: 3px;
     border: none;
     width: 80%;
     height: 2rem;
+    padding: 1%;
 }
 .input2{
     background-color: #b8dde7;
@@ -96,8 +95,6 @@
     border: none;
     width: 80%;
     height: 2rem;
+    padding: 1%;
 }
 
-.input1:hover{
-    
-}
